stuck in mini mav issue

--- a/src/app/notifications/notifications.component.css
+++ b/src/app/notifications/notifications.component.css
@@ -10,3 +10,118 @@
 .borderless td, .borderless th {
     border: none;
 }
+
+
+#mini-nav{
+	display: none;
+	text-align: center;
+	position: relative;
+	/* top: 20px; */
+	height: 40px;
+}
+#nav-select{
+  top: 12px;
+  margin-left: 10px;
+  position: relative;
+  /* margin-left: 10px; */
+  width: 680px;
+}
+/* mini mav */
+@media(max-width:790px) {
+	#mini-nav{display: inline-block;};
+	
+  }
+  @media(max-width:790px){
+    /* #nav-select{margin-left: 18px; position: relative;bottom: 210px;width: 680px} */
+    /* #nav-select{ position: relative;bottom: 210px;margin-left: ;width: 670px;}; */
+    #nav-select{width:670px !important}
+    }
+    @media(max-width:760px) {
+    #nav-select{width:655px !important}
+    
+    }
+    @media(max-width:740px) {
+    #nav-select{width:640px !important}
+    
+    }
+    @media(max-width:720px) {
+    #nav-select{width:610px !important}
+    
+    }
+    @media(max-width:700px) {
+    #nav-select{width:590px !important}
+    
+    }
+   
+    @media(max-width:680px) {
+    #nav-select{width:580px !important}
+    
+    }
+    @media(max-width:660px) {
+    #nav-select{width:550px !important}
+    
+    }
+    @media(max-width:640px) {
+    #nav-select{width:530px !important}
+    
+    }
+    @media(max-width:620px) {
+    #nav-select{width:505px !important}
+    
+    }
+    @media(max-width:600px) {
+    #nav-select{width:480px !important}
+    
+    }
+    @media(max-width:580px) {
+    #nav-select{width:460px !important}
+    
+    }
+    @media(max-width:560px) {
+    #nav-select{width:430px !important}
+    
+    }
+    @media(max-width:540px) {
+    #nav-select{width:420px !important}
+    
+    }
+    @media(max-width:520px) {
+    #nav-select{width:410px !important}
+    
+    }
+    @media(max-width:500px) {
+    #nav-select{width:400px !important}
+    
+    }
+    @media(max-width:480px) {
+    #nav-select{width:400px !important}
+    
+    }
+    @media(max-width:460px) {
+    #nav-select{width:320px !important}
+    
+    }
+    @media(max-width:400px) and (min-width:380px) {
+      #nav-select{width:300px !important}
+      
+      }
+   @media(max-width:380px) and (min-width:360px) {
+        #nav-select{width:280px !important}
+        
+    }
+    @media(max-width:360px) and (min-width:340px) {
+      #nav-select{width:270px !important}
+      
+  }
+  @media(max-width:340px) and (min-width:320px) {
+    #nav-select{width:250px !important}
+    
+} 
+@media(max-width:320px) and (min-width:300px) {
+  #nav-select{width:230px !important}
+  
+} 
+@media(max-width:300px) and (min-width:266px) {
+  #nav-select{width:210px !important}
+  
+} 
